# pomodoro

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/pomodoro/: models.py  serializers.py  urls.py  views.py
backend/pomodoro/migrations/: 0001_initial.py
backend/users/: apps.py  serializers.py  urls.py  views.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Home.jsx  Login.jsx  SignUp.jsx  Tasks.jsx  Timer.jsx  index.css
